# GAL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
demo/: CMakeLists.txt  main.cpp
demo/3d_demo/: 3d_demo.cpp  3d_demo.hpp
demo/clear_color_demo/: clear_color_demo.hpp
demo/gltf_demo/: gltf_demo.cpp  gltf_demo.hpp
demo/menu_demo/: menu_demo.cpp  menu_demo.hpp
demo/mul_obj_draw_demo/: mul_obj_draw_demo.cpp  mul_obj_draw_demo.hpp
demo/scene_with_previous_scene/: scene_with_previous_scene.cpp  scene_with_previous_scene.hpp
demo/shaders/3d_demo/: vert.glsl
demo/shaders/gltf_demo/: frag.glsl  vert.glsl
demo/shaders/mul_obj_draw_demo/: vert.glsl
demo/shaders/texture_demo/: frag.glsl  vert.glsl
demo/texture_demo/: texture_demo.cpp  texture_demo.hpp
glfw/: window.cpp  window.hpp
include/GAL/: CMakeLists.txt  framebuffer.hpp  gltf_loader.hpp  image.hpp  init.hpp  shader.hpp  texture.hpp  types.hpp  vertex_array.hpp
include/GAL/application/: CMakeLists.txt  application.cpp  application.hpp  retro_3d_scene.hpp  scene.cpp  scene.hpp
include/GAL/application/retro_3d_scene/: node.hpp  retro_3d_scene.hpp
include/GAL/application/window/: CMakeLists.txt  window.cpp  window.hpp
include/GAL/buffer/: buffer.hpp  index_buffer.hpp  vertex_buffer.hpp
include/GAL/graphics/: CMakeLists.txt  framebuffer.hpp  gltf_loader.hpp  shader.hpp  texture.hpp  vertex_array.hpp
include/GAL/graphics/buffer/: buffer.cpp  buffer.hpp  index_buffer.cpp  index_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
include/GAL/graphics/renderer/: renderer.cpp  renderer.hpp  retro_renderer.hpp  single_shader_renderer.cpp  single_shader_renderer.hpp
include/GAL/graphics/shader/: shader.hpp
include/GAL/graphics/texture/: texture.cpp  texture.hpp
include/GAL/graphics/vertex_array/: vertex_array.hpp
include/GAL/internal/: CMakeLists.txt
include/GAL/renderer/: renderer.hpp  retro_renderer.hpp
include/application/: application.cpp  application.hpp  scene.cpp
include/graphics/: CMakeLists.txt
include/graphics/buffer/: buffer.hpp  index_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
include/graphics/image/: image.cpp  image.hpp
include/graphics/renderer/: renderer.cpp  renderer.hpp
include/graphics/shader/: shader.cpp  shader.hpp
include/graphics/texture/: texture.hpp
include/graphics/vertex_array/: vertex_array.cpp  vertex_array.hpp
include/internal/graphics/: CMakeLists.txt  init.cpp  types.hpp
private/: CMakeLists.txt
private/internal/graphics/: CMakeLists.txt  init.cpp  init.hpp
resources/blender-gltf-attempt/: dice.gltf  human.gltf
src/: .gitignore  CMakeLists.txt  Makefile  framebuffer.cpp  init.cpp  main.cpp  texture.cpp  vertex_array.cpp
src/application/: CMakeLists.txt  application.cpp  application.hpp  retro_3d_scene.cpp  scene.cpp  scene.hpp
src/application/glfw/: window.cpp  window.hpp
src/application/retro_3d_scene/: CMakeLists.txt  node.cpp  retro_3d_scene.cpp
src/application/window/: CMakeLists.txt  window.cpp
src/gl/: CMakeLists.txt  buffer.cpp  buffer.hpp  error_handling.cpp  error_handling.hpp  index_buffer.cpp  index_buffer.hpp  initialize_opengl.cpp  initialize_opengl.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  types.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/glfw/: Makefile  window.cpp  window.hpp
src/graphics/: CMakeLists.txt  framebuffer.cpp  gltf_loader.cpp  image.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/graphics/buffer/: buffer.cpp  index_buffer.cpp  vertex_buffer.cpp
src/graphics/renderer/: renderer.cpp  retro_renderer.cpp  single_shader_renderer.cpp
src/imgui_window/: imgui_window.cpp  imgui_window.hpp
src/scene_demos/: 3d_demo.cpp  3d_demo.hpp  CMakeLists.txt  clear_color_demo.cpp  clear_color_demo.hpp  gltf_demo.cpp  gltf_demo.hpp  main_scene_demo.hpp  menu_demo.cpp  menu_demo.hpp  mul_obj_draw_demo.cpp  mul_obj_draw_demo.hpp  scene_demo.hpp  scene_with_previous_scene.cpp  scene_with_previous_scene.hpp  texture_demo.cpp
src/scene_demos/3d_demo/: 3d_demo.cpp  3d_demo.hpp
src/scene_demos/clear_color_demo/: clear_color_demo.cpp  clear_color_demo.hpp
src/scene_demos/gltf_demo/: gltf_demo.cpp  gltf_demo.hpp
src/scene_demos/menu_demo/: menu_demo.hpp
src/scene_demos/mul_obj_draw_demo/: mul_obj_draw_demo.cpp  mul_obj_draw_demo.hpp
src/scene_demos/scene_with_previous_scene/: scene_with_previous_scene.cpp  scene_with_previous_scene.hpp
src/scene_demos/texture_demo/: texture_demo.cpp  texture_demo.hpp
src/scene_loader/: scene.cpp  scene.hpp  scene_loader.cpp  scene_loader.hpp
src/shader/: frag.glsl  vert.glsl
src/shader/3d_demo/: frag.glsl  vert.glsl
src/shader/gltf_demo/: frag.glsl  vert.glsl
src/shader/mul_obj_draw_demo/: frag.glsl
src/shader/texture_demo/: frag.glsl  vert.glsl
src/stb/: image.cpp  image.hpp
src/utils/: print_vec.hpp
