add_subdirectory(window/)

#scene
add_library(application__scene STATIC scene.cpp)
target_link_libraries(application__scene PRIVATE application__window)

#application
add_library(application STATIC application.cpp)
target_link_libraries(application PRIVATE third_party__imgui graphics_internal__init)
target_link_libraries(application PUBLIC application__scene application__window third_party__scluk)
